ex5/testdata/typechecker/error/BinopTest-err4.java
class BinopTest {
	public static void main(String[] a){
            int x;
            x = true * 283; // TE
	}
}

